<resources>
    <string name="app_name">Quiz App</string>
    <string name="questions">Questions</string>
    <string name="total_questions">Total Questions</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_d">Answer D</string>
    <string name="answer_c">Answer C</string>
    <string name="submit">Submit</string>
</resources>